--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,6 @@ jobs:
         run: |
           ssh raphyserver@3.89.252.255 <<EOF
             cd /home/raphyserver/www/AARON
+            git checkout main
+            git pull
           EOF
