--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,11 @@ jobs:
             git checkout main
             git pull
           EOF
+      # Étape 4 : Construire l'image Docker
+      - name: Build Docker image
+        run: |
+          ssh raphyserver@3.89.252.255 <<EOF
+           cd /home/raphyserver/www/AARON/client
+           docker build -t react-app:latest .
+           docker-compose up -d
+          EOF
