--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           ssh raphyserver@3.89.252.255 <<EOF
            cd /home/raphyserver/www/AARON/client
-           docker build -t react-app:latest .
-           docker-compose up -d
+           docker-compose -f docker-compose.yml
+           docker system prune -af
+           docker image prune -af
+           docker-compose up -d --build
           EOF
