--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,43 +1,41 @@
-name: Deploy on Push to Main
+name: Deploy to AWS
 
-# Déclencheur pour les événements "push" sur la branche "main"
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Étape 1 : Vérification du code source
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Étape 2 : Configurer l'accès SSH
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" | base64 -d > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan 3.89.252.255 >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      # Étape 3 : Exécuter le pull sur Le serveurs
-      - name: Pull latest changes on the server
+      - name: Deploy application
         run: |
-          ssh raphyserver@3.89.252.255 <<EOF
-            cd /home/raphyserver/www/AARON
-            git checkout main
-            git pull
-          EOF
-      # Étape 4 : Construire l'image Dockers
-      - name: Build Docker image
-        run: |
-          ssh raphyserver@3.89.252.255 <<EOF
-           cd /home/raphyserver/www/AARON/client
-           docker-compose -f docker-compose.yml
-           docker system prune -af
-           docker image prune -af
-           docker-compose up -d --build
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} <<EOF
+            # Aller dans le répertoire de l'application
+            cd /home/raphaelserv/mon-app
+
+            # Mettre à jour le code depuis le dépôt Git
+            git pull origin master
+
+            # Arrêter et supprimer le conteneur existant
+            docker-compose down
+
+            # Supprimer les images Docker obsolètes
+            docker system prune -af
+            docker image prune -af
+
+            # Recréer et redémarrer le conteneur
+            docker-compose up -d --build
           EOF
