--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,11 @@ jobs:
         uses: actions/checkout@v3
 
       # Étape 2 : Exécuter les tests
+
       - name: Run tests
-        run: npm test
+        run: |
+         cd client/
+         npm test
 
       # Étape 3 : Configurer l'accès SSH
       - name: Set up SSH
