--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -11,3 +11,17 @@ services:
       - ./public:/src/public
     ports:
       - "3000:3000" # Expose le port 3000
+  db:
+    image: mysql:8.0
+    container_name: mon-mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: user
+      MYSQL_PASSWORD: userpassword
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql  # Exécute init.sql au démarrage
