--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           ssh raphyserver@${{ secrets.SSH_HOST }} <<EOF
             mkdir -p ${{ secrets.WORK_DIR }}/client/backup
+            touch ${{ secrets.WORK_DIR }}/client/backup/db_backup.sql 
             docker exec mon-mysql mysqldump -uuser -puserpassword mydatabase > ${{ secrets.WORK_DIR }}/backup/db_backup.sql
           EOF
 
